--- a/folgenUndReihen.tex
+++ b/folgenUndReihen.tex
@@ -42,21 +42,31 @@ $\forall (a_n)_{n \in \N}, (b_n)_{n \in \N}$ konvergent, mit $\lim_{n \to \infty
 \begin{compactitem}
    \item $(a_n)_{n \in \N}$ monoton wachend und nach oben beschränkt $\implies (a_n)_{n \in \N}$ konvergiert und $\lim_{n \to \infty} a_n = \sup \left\{ a_n : n \ge 1 \right\}$
    \item $(a_n)_{n \in \N}$ monoton fallend und nach unten beschränkt $\implies (a_n)_{n \in \N}$ konvergiert und $\lim_{n \to \infty} a_n = \inf \left\{ a_n : n \ge 1 \right\}$
-\end{compactitem} 
+\end{compactitem}
 
 \subsection{Funktionen und deren Grenzwert}
-\begin{compactitem}
-    \item $\lim_{n \to \infty} a^n = 0, \ |a| < 1$
-    \item $\lim_{n \to \infty} \sqrt[^n]{a} = \lim_{n \to \infty} \sqrt[^n]{n^a} = 1, \ a > 0$
-    \item $\lim_{n \to \infty} \sqrt[^n]{n} = 1$
-    \item $\lim_{n \to \infty} \frac{\log_an}{n} = 0, \ a > 1$
-    \item $\lim_{n \to \infty} \frac{n^k}{a^n} = 0, \ a > 1$
-    \item $\lim_{n \to \infty} \frac{a^n}{n!} = 0$
-    \item $\lim_{n \to \infty} \sum_{k=1}^{n} \frac{1}{k} = \infty$
-    \item $\lim_{n \to \infty} \left( 1 + \frac{1}{n} \right)^n = e$
-    \item $\lim_{n \to \infty} \left( 1 - \frac{1}{n} \right)^n = \frac{1}{e}$
-    \item $\lim_{n \to \infty} \left( 1 + \frac{x}{n} \right)^n =e^x$
-\end{compactitem}
+\begin{tabular}{l | c | c}
+    Funktion & Grenzwert & Bedingung\\\hline
+    $\lim_{n \to \infty} a^n$ & $0$ & $|a| < 1$\\\hline
+    $\lim_{n \to \infty} \sqrt[^n]{a}$ & $1$ & $a > 0$\\\hline
+    $\lim_{n \to \infty} \sqrt[^n]{n^a}$ & $1$ & $a > 0$\\\hline
+    $\lim_{n \to \infty} \sqrt[^n]{n}$ & $1$\\\hline
+    $\lim_{n \to \infty} \frac{\log_an}{n}$ & $0$ & $a > 1$\\\hline
+    $\lim_{n \to \infty} \frac{n^k}{a^n}$ & $0$ & $a > 1$\\\hline
+    $\lim_{n \to \infty} \frac{a^n}{n!}$ & $0$\\\hline
+    $\lim_{n \to \infty} \sum_{k=1}^{n} \frac{1}{k}$ & $\infty$\\\hline
+    $\lim_{n \to \infty} \left( 1 + \frac{1}{n} \right)^n$ & $e$\\\hline
+    $\lim_{n \to \infty} \left( 1 - \frac{1}{n} \right)^n$ & $\frac{1}{e}$\\\hline
+    $\lim_{n \to \infty} \left( 1 + \frac{a}{n} \right)^n$ &e$^a$\\\hline
+    $\lim_{n \to 0} \frac{\sin n}{n}$ & $1$\\\hline
+    $\lim_{n \to 1} \frac{\ln n}{n - 1}$ & $1$\\\hline
+    $\lim_{n \to \infty} \frac{n^m}{\exp(an)}$ && $m \in \R, a > 0$\\\hline
+    $\lim_{n \to 0} \frac{\exp(n) - 1}{n}$ & $1$\\\hline
+    $\lim_{n \to 0} \frac{\ln(1 + n)}{n}$ & $1$\\\hline
+    $\lim_{n \to \infty} \frac{\ln n}{n^a}$ & $0$ & $a > 0$\\\hline
+    $\lim_{n \to 0} \frac{a^n - 1}{n}$ & $\ln a$ & $a > 0$\\\hline
+    $\lim_{n \to 0} n^a \ln n)$ & $0$ & $a > 0$\\\hline
+\end{tabular}
 
 \subsection{Bernoulli Ungleichung}
 $\left( 1 + x \right)^{n} \ge  1 + n \cdot x \ \forall n \in N, x > -1 $
@@ -142,18 +152,26 @@ Jede beschränkte Folge besitzt eine konvergente Teilfolge.
     \item[Rekursive Definition:]
         \begin{inparaitem}
             \item Geschlossene Formel finden
-            \item 
+            \item
                 \begin{inparaenum}
                     \item Monotonie zeigen
                     \item Beschränktheit zeigen
                     \item Monoton Konvergenzsatz
+                    \item Induktionstrick:
+                        \begin{compactitem}
+                            \item $c = \lim_{n \to \infty} a_n = \lim_{n \to \infty} a_{n+1}$
+                            \item Solve $c$
+                        \end{compactitem}
                 \end{inparaenum}
         \end{inparaitem}
 \end{compactdesc}
+
 \section{Reihen}
 \begin{compactdesc}
     \item[Folge der Partialsummen:] $(S_n)_{n \in \N} := a_1 + a_2 + \dots + a_n = \sum_{k=1}^{n} a_k$ einer Folge $(a_n)_{n \in \N}$.
         \begin{compactitem}
+        \item $(S_n)_{n \in \N}$ konv. $\implies \sum_{k=1}^{\infty} a_k$  konv.
+            \item $(S_n)_{n \in \N} \text{ nach oben beschränkt } \iff \sum_{k=1}^{\infty} a_k, a_k \ge 0 \ \forall k \in \N^*$ konvergiert.
             \item Ist monoton steigend.
         \end{compactitem}
     \item[Reihe:] Unendliche Summe $\sum_{k=1}^{\infty} a_k$ einer Folge $(a_n)_{n \in \N}$.
@@ -164,29 +182,37 @@ Jede beschränkte Folge besitzt eine konvergente Teilfolge.
     \item[Konvergent:] ist $\sum_{k=1}^{\infty} a_k$ falls die Folge $(S_n)_{n \in \N}$ von $(a_n)_{n \in \N}$ konvergiert.
         \begin{compactitem}
             \item $\sum_{k=1}^{\infty} a_k$ konvergiert $\implies \lim_{k \to \infty} a_k = 0 $.
-            \item $\lim_{k \to \infty} a_k \neq  0 \implies \sum_{k=1}^{\infty} a_k$ divergent.
+            \item $\lim_{k \to \infty} |a_k| \neq  0 \implies \sum_{k=1}^{\infty} a_k$ divergent.
         \end{compactitem}
-    \item[Grenzwert:] $\sum_{k=1}^{\infty} a_k := \lim_{n \to \infty} S_n$.
+    \item[Grenzwert:] $\sum_{k=1}^{\infty} a_k := \lim_{n \to \infty} S_n = \lim_{k \to \infty} \sum_{n=1}^{k} S_n$.
     \item Weglassen von Anfangsgliedern verändert die Konvergenz nicht, verändert ggf. jedoch den Grenzwert.
 \end{compactdesc}
 
 \subsection{Bekannte Reihen}
-\begin{compactdesc}
-    \item[Geometrische Reihe:] $\sum_{k=0}^{\infty} q^k = 1 + q + q^2 + \dots = \frac{1}{1-q} =  
-        \begin{cases}
-            \text{divergent} & \text{ if } |q| \ge 1\\
-            \text{konvergent} & \text{ if } |g| < 1
-        \end{cases}
-    \ , q \in \C
-        $
-    \item[Harmonische Reihe:] $\sum_{k=1}^{\infty} \frac{1}{n} = \infty$
-    \item[Alternierende Harmon. Reihe:] $\sum_{k=1}^{\infty} \frac{(-1)^{k+1}}{k} = \ln 2$
-    \item[Teleskopreihe:] $\sum_{k=1}^{\infty} \frac{1}{k(k+1)} = 1$
-    \item[Exponentialfunktion:] $\exp(z) = \sum_{n=1}^{\infty} \frac{z^n}{n!} = 1 + z + \frac{z^2}{2!} + \frac{z^3}{3!} + \dots \ z \in \C,$ konvergiert absolut.
-\end{compactdesc}
+\begin{tabular}{l | l | c | c | c}
+    \multicolumn{2}{l |}{Reihe} & Wert & konv. & div.\\\hline
+    \multicolumn{2}{l |}{Geometrische Reihe} & $q \in \C$ &&\\\hline
+    $\sum_{k=0}^{\infty} aq^k$ & $a + aq +$ & $\frac{a}{1-q}$ & $|g| < 1$ & $|q| \ge 1$\\\hline
+    $\sum_{k=1}^{\infty} (k+1)q^k$ & $1 + 2q +$ & $\frac{1}{(1-q)^2}$ &&\\\hline
+    \multicolumn{2}{l |}{Harmonische Reihe}&&&\\\hline
+    $\sum_{k=1}^{\infty} \frac{1}{k}$ & & $\infty$ &&\\\hline
+    $\sum_{k=1}^{\infty} \frac{1}{k^2}$ && $\frac{\pi^2}{6}$ &&\\\hline
+    $\sum_{k=1}^{\infty} \frac{1}{k^4}$ && $\frac{\pi^4}{90}$ &&\\\hline
+    $\sum_{k=1}^{\infty} \frac{1}{k^a}$ &&& $a > 1$ & $a \le 1$\\\hline
+    \multicolumn{2}{l |}{Alternierende Harmon. Reihe} &&&\\\hline
+    $\sum_{k=1}^{\infty} \frac{(-1)^{k+1}}{k}$ && $\ln 2$ &&\\\hline
+    $\sum_{k=1}^{\infty} \frac{(-1)^{k+1}}{k^2}$ && $\frac{\pi^2}{12}$ &&\\\hline
+    $\sum_{k=1}^{\infty} \frac{(-1)^{k+1}}{k^4}$ && $\frac{\pi^4}{720}$ &&\\\hline
+    $\sum_{k=1}^{\infty} \frac{(-1)^k}{2k + 1}$ & $1 - \frac{1}{3} + \frac{1}{5} -$ & $\frac{\pi}{4}$ &&\\\hline
+    \multicolumn{1}{l |}{Teleskopreihe} &&&\\\hline
+    $\sum_{k=1}^{\infty} \frac{1}{k(k+1)}$ && $1$ &&\\\hline
+    \multicolumn{3}{l |}{Exponentialfunktion $z \in \C,$ konv. abs.} &&\\\hline
+    $\sum_{k=1}^{\infty} \frac{z^k}{k!}$ & $1 + z + \frac{z^2}{2!} +$ & $\exp{z}$ &&\\\hline
+    $\sum_{k=1}^{\infty} \frac{(-1)^k}{k!}$ && $\frac{1}{e}$ &&\\\hline
+\end{tabular}
 
 \subsection{Rechenregeln}
-$\forall \sum_{k=1}^{\infty} a_k, \sum_{k=1}^{\infty} b_k$ konvergent, $\alpha \in \C$ 
+$\forall \sum_{k=1}^{\infty} a_k, \sum_{k=1}^{\infty} b_k$ konvergent, $\alpha \in \C$
 \begin{compactenum}
     \item $\sum_{k=1}^{\infty} (a_k + b_k) = \left( \sum_{k=1}^{\infty} a_k \right) + \left( \sum_{k=1}^{\infty} b_k \right)$ konvergent.
     \item $\sum_{k=1}^{\infty} \alpha \cdot a_k = \alpha \cdot \sum_{k=1}^{\infty} a_k$ konvergent.
@@ -200,60 +226,61 @@ $\sum_{k=1}^{\infty} a_k$ konvergent $\iff \forall \epsilon > 0 \ \exists N \ge 
     \item $\lim_{k \to \infty} a_k \neq  0 \implies \sum_{k=1}^{\infty} a_k$ divergent.
 \end{compactitem}
 
-\subsection{Anwendung Weierstrass}
-$\sum_{k=1}^{\infty} a_k, a_k \ge 0 \ \forall k \in \N^*$ konvergiert $\iff (S_n)_{n \in \N}$ nach oben beschränkt.
-
 \subsection{Vergleichssatz}
 Für $\sum_{k=1}^{\infty} a_k$ $\sum_{k=1}^{\infty} b_k, 0 \le a_k \le b_k \ \forall k \ge K$:
 \begin{compactdesc}
-    \item[Majoranten Kriterium:] $\sum_{k=1}^{\infty} b_k$ konvergiert $\implies \sum_{k=1}^{\infty} a_k$ konvergiert.
+\item[Majoranten Kriterium:] $\sum_{k=1}^{\infty} b_k$ konvergiert $\implies \sum_{k=1}^{\infty} a_k$ konvergiert (konv. abs. falls $|a_k| \le b_k$)
     \item[Minoranten Kriterium:] $\sum_{k=1}^{\infty} k_k$ divergiert $\implies \sum_{k=1}^{\infty} b_k$ divergiert.
 \end{compactdesc}
 
+\subsection{Umordnung}
+$\sum_{k=1}^{\infty} a'_k$ ist eine Umordnung von $\sum_{k=1}^{\infty} a_k$ falls es eine Bijektion $\phi : \N^* \to \N^*$ gibt so dass $a'_n = a_{\phi(n)}$
+\begin{compactitem}
+\item Eine nicht subjektive (nur injektiv) Abbildung entspricht der Reihe einer Teilfolge der Folge. $\sum_{n=1}^{\infty} (a_n)_{n \in N}$ konvergent $\implies \sum_{n=1}^{\infty} (a_{\phi(n)})_{n \in \N}$ konvergent.
+\end{compactitem}
+
 \subsection{Absolute Konvergenz}
-$\sum_{k=1}^{\infty} a_k$ absolut konvergent falls $\sum_{k=1}^{\infty} |a_k|$ konvergent. 
+$\sum_{k=1}^{\infty} a_k$ absolut konvergent falls $\sum_{k=1}^{\infty} |a_k|$ konvergent.
 \begin{compactitem}
     \item Falls divergent, kann sie nur gegen $+\infty$ divergieren.
-    \item $\sum_{k=1}^{\infty}| a_k|$ convergent $\implies \sum_{k=1}^{\infty} a_k$ konvergent
+    \item $\sum_{k=1}^{\infty}| a_k|$ konvergent $\implies \sum_{k=1}^{\infty} a_k$ konvergent
         \begin{compactitem}
             \item $\left| \sum_{k=1}^{\infty} a_k \right| \le \sum_{k=1}^{\infty} \left| a_k \right|$.
         \end{compactitem}
+    \item $a_n \ge 0 \implies$ absolute Konvergenz ist äquivalent zu konvergent.
 \end{compactitem}
 \begin{compactdesc}
     \item[Bedingt Konvergent:] $\sum_{k=1}^{\infty} a_k$ ist konvergent aber nicht absolut konvergent.
 \end{compactdesc}
 
+\subsubsection{Dirichlet}
+$\sum_{k=1}^{\infty} a_k$ absolute konvergent $\implies$ jede Umordnung ist konvergent mit demselben Grenzwert.
+
+\subsubsection{Riemann}
+$\sum_{k=1}^{\infty} a_k$ konvergent aber nicht absolut konvergent $\implies \exists $ Umordnung $\forall A \in \R \cup \{\pm \infty\}: \sum_{k=1}^{\infty} a_{\phi(n)} = A $.
+
 \subsection{Leibniz}
-$(a_n)_{n \in \N}, a_n \ge 0 \ \forall n \in \N$ monoton fallend und $\lim_{n \to \infty} a_n = 0 \implies S:= \sum_{k=1}^{\infty} \left( -1 \right)^{k+1} a_k$ konvergiert.
+$(a_n)_{n \in \N}$ monoton fallend, $a_n \ge 0 \ \forall n \in \N$ und $\lim_{n \to \infty} a_n = 0 \implies S:= \sum_{k=1}^{\infty} \left( -1 \right)^{k+1} a_k$ konvergiert.
 \begin{compactitem}
     \item $a_1 - a_2 \le S \le a_1$
     \item $(s_n)_{n \in \N}$ beschränkt, $\lim_{n \to \infty} s_{2n} = \lim_{n \to \infty} s_{2n + 1} = s \implies \lim_{n \to \infty} s_n = s$.
 \end{compactitem}
 
-\subsection{Umordnung}
-$\sum_{k=1}^{\infty} a'_k$ ist eine Umordnung von $\sum_{k=1}^{\infty} a_k$ falls es eine Bijektion $\phi : \N^* \to \N^*$ gibt so dass $a'_n = a_{\phi(n)}$
-
-\subsection{Dirichlet}
-$\sum_{k=1}^{\infty} a_k$ absolute konvergent $\implies$ jede Umordnung ist konvergent mit demselben Grenzwert.
-\begin{compactdesc}
-\item[Riemann:] $\sum_{k=1}^{\infty} a_k$ konvergent aber nicht absolut konvergent $\implies \exists $ Umordnung $\forall A \in \R \cup \{\pm \infty\}: \sum_{k=1}^{\infty} a_{\phi(n)} = A $.
-\end{compactdesc}
-
 \subsection{Quotientenkriterium}
 Für $(a_n)_{n \in \N}, a_n \neq 0 \ \forall n \ge 1$:
 \begin{compactenum}
-    \item $\limsup_{k \to \infty} \frac{\left| a_{n+1} \right|}{\left| a_n \right| } < 1 \implies \sum_{k=1}^{\infty} a_k$ konvergiert absolut.
+    \item $\limsup_{k \to \infty} \frac{\left| a_{n+1} \right|}{\left| a_n \right| } < 1 \implies \sum_{k=1}^{\infty} a_k$ konv. abs.
     \item $\liminf_{k \to \infty} \frac{\left| a_n + 1 \right|}{\left| a_n \right| } > 1 \implies \sum_{k=1}^{\infty} a_k$ divergiert.
 \end{compactenum}
 \begin{compactitem}
-    \item $\exists \lim_{k \to \infty} \left| \frac{a_n + 1}{a_n} \right| =  L \implies$
+    \item $\exists \lim_{k \to \infty} \left| \frac{a_n + 1}{a_n} \right| =:  L \implies$
         \[
         \begin{cases}
             \sum_{k=1}^{\infty} a_k \text{ absolut konvergent} & \text{ if } L < 1\\
             \sum_{k=1}^{\infty} a_k \text{ konvergent} & \text{ if } L > 1\\
-            \sum_{k=1}^{\infty} a_k \text{ versagt Kriterium} & \text{ if } L = 1
+            \text{ versagt Kriterium} & \text{ if } L = 1
         \end{cases}
-        \] 
+        \]
     \item Nützlich für $n!, a^n$ und Polynom.
     \item Versagt wenn unendlich viele Glieder $a_n$ der Reihe verschwinden.
 \end{compactitem}
@@ -261,7 +288,7 @@ Für $(a_n)_{n \in \N}, a_n \neq 0 \ \forall n \ge 1$:
 \subsection{Wurzelkriterium}
 Für $(a_n)_{n \in \N}$:
 \begin{compactenum}
-    \item $\limsup_{n \to \infty} \sqrt[^n]{\left| a_n \right| } < 1 \implies \sum_{k=1}^{\infty} a_k$ konvergiert absolut.
+    \item $\limsup_{n \to \infty} \sqrt[^n]{\left| a_n \right| } < 1 \implies \sum_{k=1}^{\infty} a_k$ konv. abs.
     \item $\limsup_{n \to \infty} \sqrt[^n]{\left| a_n \right| } > 1 \implies \sum_{k=1}^{\infty} a_k$ und $\sum_{k=1}^{\infty} |a_k|$ divergieren.
 \end{compactenum}
 \begin{compactitem}
@@ -270,19 +297,20 @@ Für $(a_n)_{n \in \N}$:
         \begin{cases}
             \sum_{k=1}^{\infty} a_k \text{ absolut konvergent} & \text{ if } L < 1\\
             \sum_{k=1}^{\infty} a_k \text{und }\sum_{k=1}^{\infty} |a_k| \text{ konvergent} & \text{ if } L > 1\\
+            \text{ versagt Kriterium} & \text{ if } L = 1
         \end{cases}
-        \] 
+        \]
 \end{compactitem}
 
 \subsection{Potenzreihe}
-$\text{P}(z) := c_0 + c_1 \cdot z + c_2 * z^2 + \dots = \sum_{k=0}^{\infty} c_k z^k, \ (c_n)_{n \in \N}, z \in \C$.
+$\text{P}(z) := c_0 + c_1 \cdot z + c_2 \cdot z^2 + \dots = \sum_{k=0}^{\infty} c_k z^k, \ (c_n)_{n \in \N}, z \in \C$.
 \begin{compactitem}
     \item Ist absolute konvergent $\forall |z| < p$ und divergiert $\forall |z| > p$.
     \item $
         p:= \begin{cases}
             +\infty & \text{ if } \limsup_{k \to \infty} \sqrt[^k]{\left| c_k \right| }  = 0\\
             \frac{1}{\limsup_{k \to \infty} \sqrt[^k]{|c_k|}} & \text{ if } \limsup_{k \to \infty} \sqrt[^k]{|c_k|} > 0
-        \end{cases} 
+        \end{cases}
     $
     \item Funktioniert nur wenn $\limsup_{k \to \infty} \sqrt[^k]{|c_k|}$ existiert.
     \item Konvergenzbereich von Potenzreihe ist ein Kreis.
@@ -292,6 +320,13 @@ Konvention:
 \item $\{\sqrt[^n]{ \left| a_k \right| } \}$ unbeschränkt $\implies$ wir setzen $p=0 \ (\implies |z| < 0)$.
 \item $\{\sqrt[^n]{ \left| a_k \right| } \}$ beschränkt und $\limsup_{k \to \infty} \sqrt[^k]{c_k}=0 \implies$ wir setzen $p=\infty$ ($\implies p(z)$ konvergiert $\forall c \in \C$).
 \item $\{\sqrt[^n]{ \left| a_k \right| } \}$ beschränkt und $\limsup_{k \to \infty} \sqrt[^k]{c_k}\neq 0 \implies$ wir setzen $p= \frac{1}{\limsup_{k \to \infty} \sqrt[^k]{c_k}} \ (\implies p(z)$ konvergiert $\forall |z| < p)$.
+\end{compactenum}
+
+\subsection{Rezept: Konvergenzradius Berechnen}
+\begin{compactenum}
+    \item Berechne $|p| = \lim_{n \to \infty} \left| \frac{a_n}{a_{n+1}} \right|$ falls $a_0 \neq 0 \forall n > N$ und Limes definiert oder unendlich ist.
+    \item Alternativ verwende $|p| = \frac{1}{\lim_{n \to \infty} \sqrt[^n]{|a_n|}}$
+    \item Überprüfe ob $p$ inklusive oder exklusiv ist.
 \end{compactenum}
 
 \subsection{Riemann Zeta Funktion}
@@ -306,18 +341,18 @@ $\zeta(s) := 1 + \frac{1}{2^s} + \frac{1}{3^s} + \dots = \sum_{n=1}^{\infty} \fr
     \item[Doppelfolge:] $(c_{kl})_{k,l \in \N} := a_k \cdot b_l$
     \item[Doppelreihe:] $\sum_{k,l\ge1} c_{kl}$
         \begin{compactitem}
-            \item $\sum_{k=0}^{\infty} \sum_{l=0}^{\infty}c_{kl}$ und $\sum_{k=0}^{\infty} \sum_{l=0}^{\infty}c_{kl}$ können mit unterschiedlichem Grenzwert konvergieren.
+            \item $\sum_{k=0}^{\infty} \sum_{l=0}^{\infty}c_{kl}$ und $\sum_{l=0}^{\infty} \sum_{k=0}^{\infty}c_{kl}$ können mit unterschiedlichem Grenzwert konvergieren.
         \end{compactitem}
     \item[Lineare Anordnung:] von $\sum_{k,l \ge 1} a_{kl}$ ist $\sum_{k=0}^{\infty} b_k$ falls $\exists$ Bijektion $\phi N \to N \times N$ mit $b_k = a_{\phi(k)}$.
 \end{compactdesc}
 
 \subsection{Cauchy}
-$\exists B \ge 0: \ \sum_{i=0}^{m} \sum_{j=0}^{m} \left| a_{ij} \right| \le B \ \forall \ge 0 \implies$
+$\exists B \ge 0: \ \sum_{i=0}^{m} \sum_{j=0}^{m} \left| a_{ij} \right| \le B \ \forall m \ge 0 \implies$
 \begin{compactitem}
-    \item Folgende Reihen konvergieren absolut: 
+    \item Folgende Reihen konvergieren absolut:
         \begin{compactitem}
-            \item $S_i := \sum_{j=0}^{\infty} a_{ij} \forall i \ge 0$
-            \item $U_j := \sum_{i=0}^{\infty} a_{ij} \forall j \ge 0$
+            \item $S_i := \sum_{j=0}^{\infty} a_{ij} \ \forall i \ge 0$
+            \item $U_j := \sum_{i=0}^{\infty} a_{ij} \ \forall j \ge 0$
             \item $\sum_{i=0}^{\infty} S_i$
             \item $\sum_{j=0}^{\infty} U_j$
         \end{compactitem}
@@ -347,4 +382,14 @@ dann folgt $\sum_{j=0}^{\infty} f(j) = \lim_{n \to \infty} \sum_{j=0}^{\infty} f
 \item $\forall z \in \C$ konvergiert die Folge $\left( \left( 1 + \frac{z}{n} \right)^n  \right)_{n \in \N} $ und $\lim_{n \to \infty} \left( 1 + \frac{z}{n} \right)^n = \exp(z)$.
 \end{compactitem}
 
-\todo{Konvergenz Divergent Flowchart}
+\subsection{Rezept: Konvergenz und Grenzwert}
+Gegeben $\sum_{n=1}^{\infty} (a_n)_{n \in N}$
+\begin{compactenum}
+    \item Ist spezieller Typ $\implies$ betrachte Typ
+    \item $\lim_{n \to \infty} a_n \neq 0 \implies$ divergent
+    \item Quotientenkriterium anwendbar $\implies$ fertig
+    \item Wurzelkriterium anwendbar $\implies$ fertig
+    \item $\exists$ konvergente Majoranten $\implies$ konvergent
+    \item $\exists$ divergierende Minoranten $\implies$ divergent
+    \item Umformen, ausprobieren etc...
+\end{compactenum}
