--- a/general.tex
+++ b/general.tex
@@ -1,3 +1,17 @@
 %! TEX root  = ./main.tex
 
 \section{Allgemein}
+
+\subsection{Potenzen und Wurzeln}
+
+\subsection{Logarithmen}
+
+\subsection{Spezielle Summen}
+\begin{compactitem}
+    \item $\sum_{k=1}^{\infty} k = 1 + 2 + 3 + \dots + n = \frac{n(n+1)}{2}$
+    \item $\sum_{k=1}^{\infty} k^2 = 1 + 4 + 9 + \dots + n^2 = \frac{n(n+1)(2n+1)}{6}$
+    \item $\sum_{k=1}^{\infty} k^3 = 1 + 8 + 27 + \dots n^3 = \left( \sum_{k=1}^{\infty} k  \right)^2$
+    \item $\sum_{k=1}^{\infty} (2k - 1) = 1 + 3 + 5 + \dots + (2n -1) = n^2$
+    \item $\sum_{k=1}^{\infty} (2k - 1)^2 = 1 + 9 + 25 + \dots = \frac{n(2n-1)(2n+1)}{3}$
+    \item $\sum_{k=0}^{n-1} q^k = 1 + q + \dots = \frac{q^n-1}{q-1} = \frac{1 - q^n}{1-q}, \ q \not\in \{0, 1\}$
+\end{compactitem}
