--- a/folgenUndReihen.tex
+++ b/folgenUndReihen.tex
@@ -158,10 +158,10 @@ Jede beschränkte Folge besitzt eine konvergente Teilfolge.
                     \item Beschränktheit zeigen
                     \item Monoton Konvergenzsatz
                     \item Induktionstrick:
-                        \begin{compactitem}
+                        \begin{inparaitem}
                             \item $c = \lim_{n \to \infty} a_n = \lim_{n \to \infty} a_{n+1}$
                             \item Solve $c$
-                        \end{compactitem}
+                        \end{inparaitem}
                 \end{inparaenum}
         \end{inparaitem}
 \end{compactdesc}
@@ -193,7 +193,7 @@ Jede beschränkte Folge besitzt eine konvergente Teilfolge.
     \multicolumn{2}{l |}{Reihe} & Wert & konv. & div.\\\hline
     \multicolumn{2}{l |}{Geometrische Reihe} & $q \in \C$ &&\\\hline
     $\sum_{k=0}^{\infty} aq^k$ & $a + aq +$ & $\frac{a}{1-q}$ & $|g| < 1$ & $|q| \ge 1$\\\hline
-    $\sum_{k=1}^{\infty} (k+1)q^k$ & $1 + 2q +$ & $\frac{1}{(1-q)^2}$ &&\\\hline
+    $\sum_{k=0}^{\infty} (k+1)q^k$ & $1 + 2q +$ & $\frac{1}{(1-q)^2}$ &&\\\hline
     \multicolumn{2}{l |}{Harmonische Reihe}&&&\\\hline
     $\sum_{k=1}^{\infty} \frac{1}{k}$ & & $\infty$ &&\\\hline
     $\sum_{k=1}^{\infty} \frac{1}{k^2}$ && $\frac{\pi^2}{6}$ &&\\\hline
@@ -203,12 +203,12 @@ Jede beschränkte Folge besitzt eine konvergente Teilfolge.
     $\sum_{k=1}^{\infty} \frac{(-1)^{k+1}}{k}$ && $\ln 2$ &&\\\hline
     $\sum_{k=1}^{\infty} \frac{(-1)^{k+1}}{k^2}$ && $\frac{\pi^2}{12}$ &&\\\hline
     $\sum_{k=1}^{\infty} \frac{(-1)^{k+1}}{k^4}$ && $\frac{\pi^4}{720}$ &&\\\hline
-    $\sum_{k=1}^{\infty} \frac{(-1)^k}{2k + 1}$ & $1 - \frac{1}{3} + \frac{1}{5} -$ & $\frac{\pi}{4}$ &&\\\hline
+    $\sum_{k=0}^{\infty} \frac{(-1)^k}{2k + 1}$ & $1 - \frac{1}{3} + \frac{1}{5} -$ & $\frac{\pi}{4}$ &&\\\hline
     \multicolumn{1}{l |}{Teleskopreihe} &&&\\\hline
     $\sum_{k=1}^{\infty} \frac{1}{k(k+1)}$ && $1$ &&\\\hline
     \multicolumn{3}{l |}{Exponentialfunktion $z \in \C,$ konv. abs.} &&\\\hline
-    $\sum_{k=1}^{\infty} \frac{z^k}{k!}$ & $1 + z + \frac{z^2}{2!} +$ & $\exp{z}$ &&\\\hline
-    $\sum_{k=1}^{\infty} \frac{(-1)^k}{k!}$ && $\frac{1}{e}$ &&\\\hline
+    $\sum_{k=0}^{\infty} \frac{z^k}{k!}$ & $1 + z + \frac{z^2}{2!} +$ & $\exp{z}$ &&\\\hline
+    $\sum_{k=0}^{\infty} \frac{(-1)^k}{k!}$ && $\frac{1}{e}$ &&\\\hline
 \end{tabular}
 
 \subsection{Rechenregeln}
